[gd_scene load_steps=6 format=3 uid="uid://d2wlhqt5essa5"]

[ext_resource type="Script" path="res://mods-unpacked/GodotModding-UserProfile/content/UserProfiles.gd" id="1"]
[ext_resource type="Theme" uid="uid://dggfxvljqvjxg" path="res://ModMenuTheme.tres" id="1_jeo4a"]
[ext_resource type="PackedScene" uid="uid://xykxxh0rnm8q" path="res://mods-unpacked/GodotModding-UserProfile/content/ModList.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://dbbbvokfj8ogi" path="res://Art/16x16 Pixel Art Roguelike (Forest) Pack/ui/panel-tittle.png" id="4_431jk"]
[ext_resource type="FontFile" uid="uid://chicvvurmnu8" path="res://Fonts/Poco.ttf" id="5_oesc6"]

[node name="UserProfiles" type="PopupPanel"]
disable_3d = true
transparent_bg = true
canvas_item_default_texture_filter = 0
size = Vector2i(300, 200)
visible = true
transparent = true
theme = ExtResource("1_jeo4a")
theme_type_variation = &"small_font"
script = ExtResource("1")
user_profile_section = ExtResource("3")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LabelSelectProfile" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Select Profile"

[node name="ProfileSelection" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ProfileSelect" type="OptionButton" parent="MarginContainer/VBoxContainer/ProfileSelection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonNewProfile" type="Button" parent="MarginContainer/VBoxContainer/ProfileSelection"]
unique_name_in_owner = true
layout_mode = 2
text = " + "

[node name="ButtonDeleteProfile" type="Button" parent="MarginContainer/VBoxContainer/ProfileSelection"]
unique_name_in_owner = true
layout_mode = 2
text = " - "

[node name="ProfileSettings" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ProfileSettings"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ProfileSettings/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelProfileSettings" type="Label" parent="MarginContainer/VBoxContainer/ProfileSettings/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Profile Settings"

[node name="UserProfileSections" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ProfileSettings/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ModList" parent="MarginContainer/VBoxContainer/ProfileSettings/ScrollContainer/VBoxContainer/UserProfileSections" instance=ExtResource("3")]
layout_mode = 2

[node name="InfoText" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 196.0
grow_horizontal = 2
size_flags_vertical = 0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("4_431jk")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/MarginContainer"]
layout_mode = 2
text = "MODS"

[node name="PopupNewProfile" type="PopupPanel" parent="."]
unique_name_in_owner = true
size = Vector2i(200, 104)

[node name="MarginContainer" type="MarginContainer" parent="PopupNewProfile"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 196.0
offset_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="PopupNewProfile/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PopupNewProfile/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ProfileName" type="MarginContainer" parent="PopupNewProfile/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PopupNewProfile/MarginContainer/VBoxContainer/VBoxContainer/ProfileName"]
layout_mode = 2

[node name="LabelProfileName" type="Label" parent="PopupNewProfile/MarginContainer/VBoxContainer/VBoxContainer/ProfileName/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_oesc6")
text = "Profile Name"

[node name="InputProfileName" type="LineEdit" parent="PopupNewProfile/MarginContainer/VBoxContainer/VBoxContainer/ProfileName/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
caret_blink = true
caret_blink_interval = 0.5

[node name="ButtonProfileNameSubmit" type="Button" parent="PopupNewProfile/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "OK"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/ProfileSelection/ProfileSelect" to="." method="_on_ProfileSelect_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ProfileSelection/ButtonNewProfile" to="." method="_on_ButtonNewProfile_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ProfileSelection/ButtonDeleteProfile" to="." method="_on_ButtonDeleteProfile_pressed"]
[connection signal="mod_current_config_changed" from="MarginContainer/VBoxContainer/ProfileSettings/ScrollContainer/VBoxContainer/UserProfileSections/ModList" to="." method="_on_ModList_mod_current_config_changed"]
[connection signal="mod_is_active_changed" from="MarginContainer/VBoxContainer/ProfileSettings/ScrollContainer/VBoxContainer/UserProfileSections/ModList" to="." method="_on_ModList_mod_is_active_changed"]
[connection signal="pressed" from="PopupNewProfile/MarginContainer/VBoxContainer/VBoxContainer/ButtonProfileNameSubmit" to="." method="_on_ButtonProfileNameSubmit_pressed"]
